# caselens

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
apps/api/scripts/: smoke_cohere.py
apps/api/src/caselens/: bootstrap.py  clients.py
apps/api/src/caselens/agent/: __init__.py  loop.py  tools.py
apps/api/src/caselens/api/: app.py
apps/api/src/caselens/config/: settings.py
apps/api/src/caselens/data/: db.py  generators.py  models.py  pool.py  repository.py  schema.sql
apps/api/src/caselens/rag/: answer.py  chunking.py  cli.py  db.py  embed.py  ingest.py  models.py  retrieve.py  schema.sql
apps/api/src/caselens/security/: audit.py  rbac.py
apps/api/tests/: test_access_gate.py  test_actions_confirm.py  test_agent_api.py  test_agent_loop.py  test_agent_stream.py  test_agent_tools.py  test_agent_tx_isolation.py  test_answer.py  test_bootstrap.py  test_chunking.py  test_claims_repository.py  test_data_isolation.py  test_embed.py  test_generators.py  test_health.py  test_panels.py  test_rbac.py  test_retrieve.py
apps/web/: .dockerignore  Dockerfile
apps/web/src/app/: globals.css  layout.tsx  (+1 more)
data/corpus/: coverage-matrix.md  ev-charger-manual.md  exclusions.md  extended-warranty.md  product-manual-home-battery.md  product-manual-solar-inverter.md  rma-procedure.md  warranty-policy.md
docs/adr/: 0001-cohere-native-stack.md  0002-grounded-citations.md  0003-security-first.md  0004-portable-deploy.md  0005-determinism-boundary.md  0006-eval-gate.md  adr-0007-native-grounded-citations.md
docs/deploy/: azure.md
docs/specs/: spec-0000-project-brief.md  spec-0001-rag-core.md  spec-0002-data-layer.md  spec-0003-agent.md  spec-0004-ui.md  spec-0005-deploy.md
eval/: run_agent_eval.py  run_retrieval_eval.py
eval/golden/: agent.jsonl  retrieval.jsonl
infra/: .env.prod.example  docker-compose.prod.yml  docker-compose.yml
infra/deploy/: azure-deploy.sh
(+12 files in other folders)
