[project]
name = "caselens"
version = "0.1.0"
description = "Cohere-native agent over enterprise documents with grounded citations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "cohere>=5.13",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
caselens-rag = "caselens.rag.cli:main"
caselens-seed = "caselens.data.generators:main"
caselens-bootstrap = "caselens.bootstrap:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caselens"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["caselens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["integration: needs a running Postgres (infra/docker-compose or the CI service)"]
